--- a/navigationsdk/src/main/AndroidManifest.xml
+++ b/navigationsdk/src/main/AndroidManifest.xml
@@ -1,10 +1,22 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.os.navigationsdk">
 
+    <uses-permission android:name="android.permission.AUTHENTICATE_ACCOUNTS"/>
+    <uses-permission android:name="android.permission.GET_ACCOUNTS"/>
+    <uses-permission android:name="android.permission.WRITE_SYNC_SETTINGS"/>
+
     <application
         android:allowBackup="true"
         android:label="@string/app_name"
         android:supportsRtl="true">
+
+        <provider
+            android:authorities="com.example.os.navigationsdk.navigation.provider"
+            android:name=".contentprovider.NavigationContentProvider"
+            android:label="Navigation"
+            android:exported="true"
+            android:syncable="true"
+            />
 
     </application>
 
